--- a/notebooks/week04_gt_full_node_labeling.ipynb
+++ b/notebooks/week04_gt_full_node_labeling.ipynb
@@ -43,7 +43,7 @@
       "outputs": [],
       "source": [
         "# Toy graph\n",
-        "N = 60\n",
+        "N = 80\n",
         "rel_names = ['friend', 'colleague']\n",
         "num_rel = len(rel_names)\n",
         "\n",
@@ -57,10 +57,11 @@
         "    for j in range(N):\n",
         "        if i == j:\n",
         "            continue\n",
-        "        if rng.random() < 0.06:\n",
-        "            r = 0\n",
-        "        elif rng.random() < 0.04:\n",
-        "            r = 1\n",
+        "        p = rng.random()\n",
+        "        if p < 0.07:\n",
+        "            r = 0  # friend\n",
+        "        elif p < 0.11:\n",
+        "            r = 1  # colleague\n",
         "        else:\n",
         "            continue\n",
         "        edges_src.append(i)\n",
@@ -70,10 +71,10 @@
         "edge_index = torch.tensor([edges_src, edges_dst], dtype=torch.long)\n",
         "rel_ids = torch.tensor(rel_ids, dtype=torch.long)\n",
         "\n",
-        "# Node features\n",
+        "# Node features are pure noise (baseline cannot use relations)\n",
         "X = torch.randn(N, 8)\n",
         "\n",
-        "# Labels: count friends vs colleagues in neighborhood (simple rule)\n",
+        "# Labels depend on relation-aware neighborhood counts\n",
         "deg_friend = torch.zeros(N)\n",
         "deg_coll   = torch.zeros(N)\n",
         "for s, d, r in zip(edges_src, edges_dst, rel_ids.tolist()):\n",
@@ -82,13 +83,22 @@
         "    else:\n",
         "        deg_coll[d] += 1\n",
         "\n",
-        "# Label = 1 if friends dominate colleagues, else 0\n",
-        "y = (deg_friend >= deg_coll).long()\n",
+        "score = deg_friend - deg_coll\n",
+        "# Balanced labels by median threshold\n",
+        "thr = torch.median(score)\n",
+        "y = (score > thr).long()\n",
         "\n",
-        "# Train/val split\n",
-        "idx = torch.randperm(N)\n",
-        "train_idx = idx[:40]\n",
-        "val_idx = idx[40:]\n"
+        "# Stratified train/val split\n",
+        "idx0 = torch.where(y == 0)[0]\n",
+        "idx1 = torch.where(y == 1)[0]\n",
+        "idx0 = idx0[torch.randperm(len(idx0))]\n",
+        "idx1 = idx1[torch.randperm(len(idx1))]\n",
+        "train_idx = torch.cat([idx0[:25], idx1[:25]])\n",
+        "val_idx   = torch.cat([idx0[25:], idx1[25:]])\n",
+        "\n",
+        "# shuffle train/val indices\n",
+        "train_idx = train_idx[torch.randperm(len(train_idx))]\n",
+        "val_idx = val_idx[torch.randperm(len(val_idx))]\n"
       ]
     },
     {
@@ -182,10 +192,11 @@
       "execution_count": null,
       "outputs": [],
       "source": [
-        "def train_model(model, is_gt=False, epochs=200, lr=1e-2):\n",
+        "def train_model(model, is_gt=False, epochs=400, lr=3e-3, weight_decay=1e-3):\n",
         "    model = model.to(device)\n",
-        "    opt = torch.optim.Adam(model.parameters(), lr=lr)\n",
+        "    opt = torch.optim.Adam(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
         "    logs = []\n",
+        "    best = 0.0\n",
         "    for epoch in range(1, epochs+1):\n",
         "        model.train()\n",
         "        if is_gt:\n",
@@ -199,20 +210,21 @@
         "        with torch.no_grad():\n",
         "            preds = logits.argmax(dim=-1).cpu()\n",
         "            acc = (preds[val_idx] == y[val_idx]).float().mean().item()\n",
-        "        logs.append((loss.item(), acc))\n",
+        "        best = max(best, acc)\n",
+        "        logs.append((loss.item(), acc, best))\n",
         "    return logs\n",
         "\n",
         "baseline = BaselineMLP(in_dim=8)\n",
         "gtfull = GTFullClassifier(in_dim=8, depth=2, num_rel=num_rel)\n",
         "\n",
-        "b_logs = train_model(baseline, is_gt=False, epochs=200)\n",
-        "g_logs = train_model(gtfull, is_gt=True, epochs=200)\n",
+        "b_logs = train_model(baseline, is_gt=False, epochs=400, lr=3e-3, weight_decay=1e-3)\n",
+        "g_logs = train_model(gtfull, is_gt=True, epochs=400, lr=3e-3, weight_decay=1e-3)\n",
         "\n",
         "plt.figure(figsize=(6,4))\n",
-        "plt.plot([x[1] for x in b_logs], label='Baseline MLP')\n",
-        "plt.plot([x[1] for x in g_logs], label='GT\u2011Full')\n",
+        "plt.plot([x[2] for x in b_logs], label='Baseline MLP (best-so-far)')\n",
+        "plt.plot([x[2] for x in g_logs], label='GT\u2011Full (best-so-far)')\n",
         "plt.xlabel('Epoch')\n",
-        "plt.ylabel('Val accuracy')\n",
+        "plt.ylabel('Val accuracy (best\u2011so\u2011far)')\n",
         "plt.title('GT\u2011Full vs baseline on relational labels')\n",
         "plt.grid(True, alpha=0.3)\n",
         "plt.legend()\n",
