--- a/notebooks/week01_coalgebra_demo.ipynb
+++ b/notebooks/week01_coalgebra_demo.ipynb
@@ -11,6 +11,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Visual: Coalgebra as a Behavior Generator\n",
+        "We can picture a coalgebra map as a machine that takes a **state** and outputs **(observation, next state)**.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "plt.figure(figsize=(6,2.5))\n",
+        "plt.axis('off')\n",
+        "\n",
+        "# Boxes\n",
+        "plt.text(0.1, 0.5, 'State x', fontsize=12, bbox=dict(boxstyle='round', fc='white', ec='black'))\n",
+        "plt.text(0.55, 0.65, 'Output o', fontsize=12, bbox=dict(boxstyle='round', fc='white', ec='black'))\n",
+        "plt.text(0.55, 0.35, 'Next state x' ', fontsize=12, bbox=dict(boxstyle='round', fc='white', ec='black'))\n",
+        "\n",
+        "# Arrows\n",
+        "plt.annotate('', xy=(0.5, 0.65), xytext=(0.25, 0.55), arrowprops=dict(arrowstyle='->'))\n",
+        "plt.annotate('', xy=(0.5, 0.35), xytext=(0.25, 0.45), arrowprops=dict(arrowstyle='->'))\n",
+        "\n",
+        "plt.text(0.32, 0.58, 'c(x)', fontsize=10)\n",
+        "plt.text(0.32, 0.40, 'c(x)', fontsize=10)\n",
+        "plt.title('Coalgebra: c : X \u2192 O \u00d7 X')\n",
+        "plt.show()\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
