Uploaded Lecture 8 and revised GT notebook

--- a/notebooks/week04_gt_causal_regimes_ptb_colab.ipynb
+++ b/notebooks/week04_gt_causal_regimes_ptb_colab.ipynb
@@ -7,15 +7,15 @@
     "# Week 4 — Standalone GT Causal vs Augmented Regimes (PTB / WikiText-2)\n",
     "\n",
     "This notebook is **standalone** and runs directly in Colab.\n",
-    "No Hugging Face login/token is required.\\n",
+    "No Hugging Face login/token is required.\n",
     "\n",
     "It compares six variants under a shared training budget:\n",
-    "- `transformer_causal`\n",
-    "- `transformer_future_hint`\n",
-    "- `gt_causal`\n",
-    "- `gt_noncausal`\n",
-    "- `gt_pred_next_detach`\n",
-    "- `gt_pred_prev_causal_detach`\n",
+    "- `AR-Base` (internal id: `transformer_causal`)\n",
+    "- `AR+FutureHint` (internal id: `transformer_future_hint`)\n",
+    "- `GT-CausalGeom` (internal id: `gt_causal`)\n",
+    "- `GT-AugGeom` (internal id: `gt_noncausal`)\n",
+    "- `GT-PredictiveHint` (internal id: `gt_pred_next_detach`)\n",
+    "- `GT-CausalSelfHint` (internal id: `gt_pred_prev_causal_detach`)\n",
     "\n",
     "Recommended workflow:\n",
     "1. Start with `DATASET='ptb'`.\n",
@@ -103,9 +103,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note on phase-transition behavior**\\n",
-    "For `gt_pred_next_detach`, transition-like behavior usually appears later than 1.2k steps.\\n",
-    "Recommended PTB setting: `CONTEXT>=128`, `NUM_ITERS>=5000`, and optionally 2-3 seeds for stability.\\n"
+    "**Note on phase-transition behavior**\n",
+    "For `GT-PredictiveHint` (internal id: `gt_pred_next_detach`), transition-like behavior usually appears later than 1.2k steps.\n",
+    "Recommended PTB setting: `CONTEXT>=128`, `NUM_ITERS>=5000`, and optionally 2-3 seeds for stability.\n"
    ]
   },
   {
@@ -333,25 +333,86 @@
     "#@title Run six-way causal-ablation comparison\n",
     "set_seed(0)\n",
     "\n",
-    "variants = {\n",
-    "    'transformer_causal': lambda: TransformerLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, future_hint=False, hint_scale=HINT_SCALE),\n",
-    "    'transformer_future_hint': lambda: TransformerLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, future_hint=True, hint_scale=HINT_SCALE),\n",
-    "    'gt_noncausal': lambda: GTLiteLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, geo_causal=False, geo_mix_source='hidden', pred_temp=PRED_TEMP),\n",
-    "    'gt_causal': lambda: GTLiteLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, geo_causal=True, geo_mix_source='hidden', pred_temp=PRED_TEMP),\n",
-    "    'gt_pred_next_detach': lambda: GTLiteLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, geo_causal=False, geo_mix_source='pred_next_detach', pred_temp=PRED_TEMP),\n",
-    "    'gt_pred_prev_causal_detach': lambda: GTLiteLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, geo_causal=True, geo_mix_source='pred_prev_causal_detach', pred_temp=PRED_TEMP),\n",
-    "}\n",
+    "MODEL_SPECS = [\n",
+    "    {\n",
+    "        'id': 'transformer_causal',\n",
+    "        'label': 'AR-Base',\n",
+    "        'display': 'AR Transformer (prefix-only)',\n",
+    "        'family': 'transformer',\n",
+    "        'attention_regime': 'strict_causal',\n",
+    "        'geometric_regime': 'none',\n",
+    "        'hint_regime': 'none',\n",
+    "        'ctor': lambda: TransformerLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, future_hint=False, hint_scale=HINT_SCALE),\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 'transformer_future_hint',\n",
+    "        'label': 'AR+FutureHint',\n",
+    "        'display': 'AR Transformer + explicit future side hint',\n",
+    "        'family': 'transformer',\n",
+    "        'attention_regime': 'strict_causal',\n",
+    "        'geometric_regime': 'none',\n",
+    "        'hint_regime': 'explicit_noncausal_side_hint',\n",
+    "        'ctor': lambda: TransformerLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, future_hint=True, hint_scale=HINT_SCALE),\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 'gt_noncausal',\n",
+    "        'label': 'GT-AugGeom',\n",
+    "        'display': 'GT-Lite augmented geometric mix',\n",
+    "        'family': 'gt_lite',\n",
+    "        'attention_regime': 'strict_causal',\n",
+    "        'geometric_regime': 'augmented_noncausal',\n",
+    "        'hint_regime': 'hidden_state_mix',\n",
+    "        'ctor': lambda: GTLiteLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, geo_causal=False, geo_mix_source='hidden', pred_temp=PRED_TEMP),\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 'gt_causal',\n",
+    "        'label': 'GT-CausalGeom',\n",
+    "        'display': 'GT-Lite strict causal geometric mix',\n",
+    "        'family': 'gt_lite',\n",
+    "        'attention_regime': 'strict_causal',\n",
+    "        'geometric_regime': 'strict_causal',\n",
+    "        'hint_regime': 'hidden_state_mix',\n",
+    "        'ctor': lambda: GTLiteLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, geo_causal=True, geo_mix_source='hidden', pred_temp=PRED_TEMP),\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 'gt_pred_next_detach',\n",
+    "        'label': 'GT-PredictiveHint',\n",
+    "        'display': 'GT-Lite predictive self-hint (next-step expectation)',\n",
+    "        'family': 'gt_lite',\n",
+    "        'attention_regime': 'strict_causal',\n",
+    "        'geometric_regime': 'augmented_noncausal',\n",
+    "        'hint_regime': 'predicted_next_expectation_detached',\n",
+    "        'ctor': lambda: GTLiteLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, geo_causal=False, geo_mix_source='pred_next_detach', pred_temp=PRED_TEMP),\n",
+    "    },\n",
+    "    {\n",
+    "        'id': 'gt_pred_prev_causal_detach',\n",
+    "        'label': 'GT-CausalSelfHint',\n",
+    "        'display': 'GT-Lite causal self-hint control (prev-step expectation)',\n",
+    "        'family': 'gt_lite',\n",
+    "        'attention_regime': 'strict_causal',\n",
+    "        'geometric_regime': 'strict_causal',\n",
+    "        'hint_regime': 'predicted_prev_expectation_detached',\n",
+    "        'ctor': lambda: GTLiteLM(vocab_size, D_MODEL, N_LAYERS, N_HEADS, max_len=CONTEXT, geo_causal=True, geo_mix_source='pred_prev_causal_detach', pred_temp=PRED_TEMP),\n",
+    "    },\n",
+    "]\n",
     "\n",
     "results = {}\n",
     "rows = []\n",
-    "for name, ctor in variants.items():\n",
-    "    print(f'\\n=== {name} ===')\n",
-    "    model = ctor().to(device)\n",
-    "    hist, test_loss, test_ppl = run_variant(name, model)\n",
-    "    results[name] = {'history': hist, 'test_loss': test_loss, 'test_ppl': test_ppl}\n",
+    "for spec in MODEL_SPECS:\n",
+    "    mid = spec['id']\n",
+    "    print(f\"\\n=== {spec['label']} [{mid}] ===\")\n",
+    "    model = spec['ctor']().to(device)\n",
+    "    hist, test_loss, test_ppl = run_variant(mid, model)\n",
+    "    results[mid] = {'history': hist, 'test_loss': test_loss, 'test_ppl': test_ppl, 'label': spec['label']}\n",
     "    last = hist[-1] if hist else {'val_loss': float('nan'), 'val_ppl': float('nan')}\n",
     "    rows.append({\n",
-    "        'model': name,\n",
+    "        'model_id': mid,\n",
+    "        'model_label': spec['label'],\n",
+    "        'model_display': spec['display'],\n",
+    "        'family': spec['family'],\n",
+    "        'attention_regime': spec['attention_regime'],\n",
+    "        'geometric_regime': spec['geometric_regime'],\n",
+    "        'hint_regime': spec['hint_regime'],\n",
     "        'last_val_loss': last['val_loss'],\n",
     "        'last_val_ppl': last['val_ppl'],\n",
     "        'test_loss': test_loss,\n",
@@ -369,14 +430,18 @@
    "outputs": [],
    "source": [
     "#@title Plot validation loss and perplexity curves\n",
+    "plot_order = [spec['id'] for spec in MODEL_SPECS]\n",
+    "label_map = {spec['id']: spec['label'] for spec in MODEL_SPECS}\n",
+    "\n",
     "plt.figure(figsize=(9,4))\n",
-    "for name, obj in results.items():\n",
+    "for mid in plot_order:\n",
+    "    obj = results[mid]\n",
     "    h = obj['history']\n",
     "    if not h:\n",
     "        continue\n",
     "    xs = [r['iter'] for r in h]\n",
     "    ys = [r['val_loss'] for r in h]\n",
-    "    plt.plot(xs, ys, 'o--', label=name)\n",
+    "    plt.plot(xs, ys, 'o--', label=label_map[mid])\n",
     "plt.title(f'Val loss ({DATASET})')\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel('Val loss')\n",
@@ -386,13 +451,14 @@
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(9,4))\n",
-    "for name, obj in results.items():\n",
+    "for mid in plot_order:\n",
+    "    obj = results[mid]\n",
     "    h = obj['history']\n",
     "    if not h:\n",
     "        continue\n",
     "    xs = [r['iter'] for r in h]\n",
     "    ys = [r['val_ppl'] for r in h]\n",
-    "    plt.plot(xs, ys, 'o--', label=name)\n",
+    "    plt.plot(xs, ys, 'o--', label=label_map[mid])\n",
     "plt.title(f'Val perplexity ({DATASET})')\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel('Val ppl')\n",
@@ -409,19 +475,20 @@
    "outputs": [],
    "source": [
     "#@title Auto-interpretation summary\n",
-    "def regime(m):\n",
-    "    if m in ['transformer_causal', 'gt_causal', 'gt_pred_prev_causal_detach']:\n",
+    "\n",
+    "def regime(model_id):\n",
+    "    if model_id in ['transformer_causal', 'gt_causal', 'gt_pred_prev_causal_detach']:\n",
     "        return 'C'\n",
-    "    if m in ['transformer_future_hint', 'gt_noncausal']:\n",
+    "    if model_id in ['transformer_future_hint', 'gt_noncausal']:\n",
     "        return 'A'\n",
-    "    if m == 'gt_pred_next_detach':\n",
+    "    if model_id == 'gt_pred_next_detach':\n",
     "        return 'Transition'\n",
     "    return '?'\n",
     "\n",
-    "df['regime'] = df['model'].map(regime)\n",
-    "display(df[['model','regime','last_val_ppl','test_ppl']].sort_values('test_ppl'))\n",
+    "df['regime'] = df['model_id'].map(regime)\n",
+    "display(df[['model_label','model_id','regime','last_val_ppl','test_ppl']].sort_values('test_ppl'))\n",
     "\n",
-    "m = {r['model']: float(r['test_ppl']) for _, r in df.iterrows()}\n",
+    "m = {r['model_id']: float(r['test_ppl']) for _, r in df.iterrows()}\n",
     "causal_best = min(m['transformer_causal'], m['gt_causal'], m['gt_pred_prev_causal_detach'])\n",
     "causal_worst = max(m['transformer_causal'], m['gt_causal'], m['gt_pred_prev_causal_detach'])\n",
     "aug_best = min(m['transformer_future_hint'], m['gt_noncausal'])\n",
@@ -432,7 +499,7 @@
     "print(f'Dataset: {DATASET}')\n",
     "print(f'Causal cluster test PPL range: [{causal_best:.3f}, {causal_worst:.3f}]')\n",
     "print(f'Augmented cluster test PPL range: [{aug_best:.3f}, {aug_worst:.3f}]')\n",
-    "print(f'gt_pred_next_detach test PPL: {pred_next:.3f}')\n",
+    "print(f'GT-PredictiveHint test PPL: {pred_next:.3f}')\n",
     "print(f'transition_gain: {gain:.3f}')\n",
     "\n",
     "if pred_next <= aug_worst:\n",
@@ -448,12 +515,11 @@
    "metadata": {},
    "source": [
     "## Interpreting the Result (Student Notes)\n",
-    "- In this run, `gt_pred_next_detach` starts near the strict-causal models, then drops sharply after ~2k-2.5k steps.\n",
+    "- In this run, `GT-PredictiveHint` (internal id: `gt_pred_next_detach`) starts near the strict-causal models, then drops sharply after ~2k-2.5k steps.\n",
     "- This is the **phase-transition pattern**: prediction-based hints become useful enough to move performance toward the augmented regime.\n",
-    "- `gt_noncausal` remains the upper bound here because it has the strongest augmented-context pathway.\n",
-    "- `gt_pred_prev_causal_detach` staying near causal baselines is an important control: strict causal self-conditioning alone does not create the same jump.\n",
-    "- Practical lesson: the transition is sensitive to training horizon and context length (typically clearer with larger `CONTEXT` and longer runs).\n",
-    "\n"
+    "- `GT-AugGeom` remains the upper bound here because it has the strongest augmented-context pathway.\n",
+    "- `GT-CausalSelfHint` staying near causal baselines is an important control: strict causal self-conditioning alone does not create the same jump.\n",
+    "- Practical lesson: the transition is sensitive to training horizon and context length (typically clearer with larger `CONTEXT` and longer runs).\n"
    ]
   }
  ],
